--- a/my-app/src/components/Card.css
+++ b/my-app/src/components/Card.css
@@ -7,6 +7,15 @@
     border: 2px solid black;
 }
 
+.card a {
+    text-decoration: none;
+    color: black;
+}
+
+.desc {
+    font-size: 20px;
+}
+
 .image {
     width: 100%;
     height: 100%;
