--- a/my-app/src/components/Nav.css
+++ b/my-app/src/components/Nav.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    flex-wrap: wrap;
-    width: 100vw;
-    height: 100px;
+    flex-wrap: nowrap;
+    width: 100%;
     border-bottom: 2px solid #000000;
 }
 
@@ -12,7 +11,7 @@
     display: flex;
     flex-wrap: wrap;
     padding-left: 20px;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .navleft{
@@ -26,9 +25,16 @@
     width: 25vw;
 }
 
+
 .navright a {
     text-decoration: none;
     padding: 5px;
     color: black;
     font-size: 20px;
+}
+
+.navright :hover {
+    background-color: grey;
+    border: black 1px solid;
+    border-radius: 10%;
 }
