--- a/my-app/src/components/Contact.css
+++ b/my-app/src/components/Contact.css
@@ -1,3 +1,10 @@
-.Contact {
+.form {
     height: 100vh;
 }
+
+.form input {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+  }
